# rzierke-site

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  TODO.md  conftest.py  docker-compose.yml  docker-entrypoint.sh  fly.toml  main.py  movies.md  package-lock.json  package.json  pyproject.toml  start.sh  tigris-cors.json  vite.config.js
.github/workflows/: ci.yml
accounts/: admin.py  forms.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_user_private_lyrics.py  0003_user_private_performances.py  0004_accessrequest.py  0005_user_gpt_creator.py
accounts/tests/: test_forms.py  test_models.py  test_views.py
chatbot/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
chatbot/helpers/: get_convo_title.py  get_prompt.py
chatbot/migrations/: 0001_initial.py  0002_conversation_message.py  0003_aimodel_created_by_aiquirk_created_by.py  0004_conversation_effort.py
chatbot/templatetags/: chatbot_markdown.py
chatbot/tests/: test_helpers.py  test_models.py  test_views_extra.py
conf/: settings.py  settings_e2e.py  settings_test.py  urls.py  views.py
conf/tests/: test_error_handlers.py
connections/: admin.py  apps.py  earth_designation.md  graph_service.py  models.py  photo_cleanup.sh  schema.dbml  signals.py  tests.py  todo.md  urls.py  views.py
connections/migrations/: 0001_initial.py  0002_remove_character_photo_url_character_photo_path.py  0003_character_movie_introduced_and_more.py  0004_character_latest_appearance_alter_movie_characters.py  0005_character_earth_number.py  0006_earth_alter_character_earth_number.py  0007_create_bulkaddconfig.py  0008_remove_character_latest_appearance.py
connections/tests/: test_admin.py  test_graph_service.py  test_signals.py  test_views.py
development_portfolio/: admin.py  apps.py  filters.py  models.py  urls.py  views.py
development_portfolio/migrations/: 0001_initial.py  0002_skill.py  0003_project_short_description.py  0004_project_repository_url.py  0005_resource.py  0006_bot.py  0007_strudelproject.py  0008_wheel_wheelitem.py  0009_project_live_url_project_live_url_name.py
development_portfolio/tests/: test_filters.py  test_models.py  test_strudel_wheel.py  test_views.py
home/: urls.py  views.py
ministry/: admin.py  filters.py  forms.py  models.py  urls.py  views.py
rzpercussion/: admin.py  apps.py  filters.py  models.py  urls.py  views.py
templates/: 404.html  500.html  base.html
(+98 files in other folders)
