[project]
name = "rzierke-site"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.1",
    "django-browser-reload>=1.21.0",
    "django-filter>=25.2",
    "django-htmx>=1.27.0",
    "django-vite>=3.1.0",
    "psycopg[binary]>=3.3.2",
    "python-dotenv>=1.2.1",
    "python-pptx>=1.0.2",
]
