[project]
name = "rzierke-site"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.1",
    "django-browser-reload>=1.21.0",
    "django-filter>=25.2",
    "django-htmx>=1.27.0",
    "django-unfold>=0.83.1",
    "django-vite>=3.1.0",
    "gunicorn>=25.1.0",
    "markdown>=3.10.2",
    "networkx>=3.6.1",
    "nh3>=0.3.5",
    "openai>=2.24.0",
    "psycopg[binary]>=3.3.2",
    "python-dotenv>=1.2.1",
    "python-pptx>=1.0.2",
    "reportlab>=4.4.9",
    "requests>=2.34.2",
    "whitenoise>=6.12.0",
]
