[project]
name = "rzierke-site"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.43.42",
    "django>=6.0.1",
    "django-browser-reload>=1.21.0",
    "django-filter>=25.2",
    "django-htmx>=1.27.0",
    "django-unfold>=0.83.1",
    "django-vite>=3.1.0",
    "gunicorn>=25.1.0",
    "markdown>=3.10.2",
    "networkx>=3.6.1",
    "nh3>=0.3.5",
    "openai>=2.24.0",
    "psycopg[binary]>=3.3.2",
    "python-dotenv>=1.2.1",
    "python-pptx>=1.0.2",
    "reportlab>=4.4.9",
    "requests>=2.34.2",
    "whitenoise>=6.12.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "pytest-django>=4.12.0",
    "pytest-playwright>=0.8.0",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "conf.settings_test"
python_files = ["test_*.py", "tests.py"]
norecursedirs = ["node_modules", "static", "staticfiles", ".venv", "templates", "migrations"]
addopts = "--strict-markers --tb=short"
markers = [
    "e2e: end-to-end browser tests (run `npm run build` first, then `pytest -m e2e --ds=conf.settings_e2e`)",
]

[tool.coverage.run]
omit = [
    "*/migrations/*",
    "conf/asgi.py",
    "conf/wsgi.py",
    "manage.py",
    "conf/settings*",
    "*/tests/*",
    "tests/*",
    "conftest.py",
]
